@@ -22,6 +22,20 @@ name|org
 operator|.
 name|apache
 operator|.
+name|commons
+operator|.
+name|io
+operator|.
+name|FileUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|lucene
 operator|.
 name|index
@@ -57,6 +71,20 @@ operator|.
 name|util
 operator|.
 name|InfoStream
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|PrintStreamInfoStream
 import|;
 end_import
 
@@ -193,6 +221,46 @@ operator|.
 name|slf4j
 operator|.
 name|LoggerFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|File
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|FileNotFoundException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|FileOutputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|PrintStream
 import|;
 end_import
 
@@ -337,12 +405,14 @@ specifier|final
 name|PluginInfo
 name|mergedSegmentWarmerInfo
 decl_stmt|;
-DECL|field|infoStreamFile
+DECL|field|infoStream
 specifier|public
-name|String
-name|infoStreamFile
+name|InfoStream
+name|infoStream
 init|=
-literal|null
+name|InfoStream
+operator|.
+name|NO_OUTPUT
 decl_stmt|;
 comment|// Available lock types
 DECL|field|LOCK_TYPE_SIMPLE
@@ -830,8 +900,9 @@ condition|(
 name|infoStreamEnabled
 condition|)
 block|{
+name|String
 name|infoStreamFile
-operator|=
+init|=
 name|solrConfig
 operator|.
 name|get
@@ -842,7 +913,14 @@ literal|"/infoStream/@file"
 argument_list|,
 literal|null
 argument_list|)
-expr_stmt|;
+decl_stmt|;
+if|if
+condition|(
+name|infoStreamFile
+operator|!=
+literal|null
+condition|)
+block|{
 name|log
 operator|.
 name|info
@@ -852,6 +930,83 @@ operator|+
 name|infoStreamFile
 argument_list|)
 expr_stmt|;
+name|File
+name|f
+init|=
+operator|new
+name|File
+argument_list|(
+name|infoStreamFile
+argument_list|)
+decl_stmt|;
+name|File
+name|parent
+init|=
+name|f
+operator|.
+name|getParentFile
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|parent
+operator|!=
+literal|null
+condition|)
+name|parent
+operator|.
+name|mkdirs
+argument_list|()
+expr_stmt|;
+try|try
+block|{
+name|FileOutputStream
+name|fos
+init|=
+operator|new
+name|FileOutputStream
+argument_list|(
+name|f
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|infoStream
+operator|=
+operator|new
+name|PrintStreamInfoStream
+argument_list|(
+operator|new
+name|PrintStream
+argument_list|(
+name|fos
+argument_list|,
+literal|true
+argument_list|,
+literal|"UTF-8"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|log
+operator|.
+name|error
+argument_list|(
+literal|"Could not create info stream for file "
+operator|+
+name|infoStreamFile
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 name|mergedSegmentWarmerInfo
 operator|=
@@ -1099,6 +1254,13 @@ name|schema
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|iwc
+operator|.
+name|setInfoStream
+argument_list|(
+name|infoStream
+argument_list|)
+expr_stmt|;
 comment|// do this after buildMergePolicy since the backcompat logic
 comment|// there may modify the effective useCompoundFile
 name|iwc
@@ -1166,9 +1328,10 @@ operator|new
 name|Object
 index|[]
 block|{
-name|InfoStream
+name|iwc
 operator|.
-name|NO_OUTPUT
+name|getInfoStream
+argument_list|()
 block|}
 argument_list|)
 decl_stmt|;
