@@ -505,14 +505,6 @@ name|setCodec
 argument_list|(
 name|codec
 argument_list|)
-operator|.
-name|setInfoStream
-argument_list|(
-name|toInfoStream
-argument_list|(
-name|config
-argument_list|)
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|log
@@ -551,96 +543,6 @@ name|directoryFactory
 operator|=
 name|factory
 expr_stmt|;
-block|}
-DECL|method|toInfoStream
-specifier|private
-specifier|static
-name|InfoStream
-name|toInfoStream
-parameter_list|(
-name|SolrIndexConfig
-name|config
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-name|String
-name|infoStreamFile
-init|=
-name|config
-operator|.
-name|infoStreamFile
-decl_stmt|;
-if|if
-condition|(
-name|infoStreamFile
-operator|!=
-literal|null
-condition|)
-block|{
-name|File
-name|f
-init|=
-operator|new
-name|File
-argument_list|(
-name|infoStreamFile
-argument_list|)
-decl_stmt|;
-name|File
-name|parent
-init|=
-name|f
-operator|.
-name|getParentFile
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|parent
-operator|!=
-literal|null
-condition|)
-name|parent
-operator|.
-name|mkdirs
-argument_list|()
-expr_stmt|;
-name|FileOutputStream
-name|fos
-init|=
-operator|new
-name|FileOutputStream
-argument_list|(
-name|f
-argument_list|,
-literal|true
-argument_list|)
-decl_stmt|;
-return|return
-operator|new
-name|PrintStreamInfoStream
-argument_list|(
-operator|new
-name|PrintStream
-argument_list|(
-name|fos
-argument_list|,
-literal|true
-argument_list|,
-literal|"UTF-8"
-argument_list|)
-argument_list|)
-return|;
-block|}
-else|else
-block|{
-return|return
-name|InfoStream
-operator|.
-name|NO_OUTPUT
-return|;
-block|}
 block|}
 comment|/**    * use DocumentBuilder now...    * private final void addField(Document doc, String name, String val) {    * SchemaField ftype = schema.getField(name);    *<p/>    * // we don't check for a null val ourselves because a solr.FieldType    * // might actually want to map it to something.  If createField()    * // returns null, then we don't store the field.    *<p/>    * Field field = ftype.createField(val, boost);    * if (field != null) doc.add(field);    * }    *<p/>    *<p/>    * public void addRecord(String[] fieldNames, String[] fieldValues) throws IOException {    * Document doc = new Document();    * for (int i=0; i<fieldNames.length; i++) {    * String name = fieldNames[i];    * String val = fieldNames[i];    *<p/>    * // first null is end of list.  client can reuse arrays if they want    * // and just write a single null if there is unused space.    * if (name==null) break;    *<p/>    * addField(doc,name,val);    * }    * addDocument(doc);    * }    * ****    */
 DECL|field|isClosed
@@ -777,19 +679,11 @@ block|}
 block|}
 finally|finally
 block|{
-if|if
-condition|(
-name|infoStream
-operator|!=
-literal|null
-condition|)
-block|{
 name|infoStream
 operator|.
 name|close
 argument_list|()
 expr_stmt|;
-block|}
 name|isClosed
 operator|=
 literal|true
