@@ -24,5 +24,6 @@
   <indexConfig>
     <useCompoundFile>${useCompoundFile:false}</useCompoundFile>
     <maxIndexingThreads>123</maxIndexingThreads>
+    <infoStream file="infostream.txt">true</infoStream>
   </indexConfig>
 </config>
