@@ -36,6 +36,20 @@ name|org
 operator|.
 name|apache
 operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|PrintStreamInfoStream
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|solr
 operator|.
 name|SolrTestCaseJ4
@@ -113,6 +127,16 @@ name|iwc
 operator|.
 name|getMaxThreadStates
 argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|iwc
+operator|.
+name|getInfoStream
+argument_list|()
+operator|instanceof
+name|PrintStreamInfoStream
 argument_list|)
 expr_stmt|;
 block|}
